# factored-pycon-workshop-2026-data-engineering

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SOLUTIONS.md  docker-compose.yml  pyproject.toml  requirements.txt  run_demo.py
dags/: affidavit_dag.py
data/canned_llm/acct_1357_alt_labels/: correct.json
data/canned_llm/acct_2468_footer_bos/: correct.json
data/canned_llm/acct_3377_alt_fields/: correct.json
data/canned_llm/acct_5678_variant/: correct.json
data/canned_llm/acct_6644_multi_amounts/: correct.json
data/canned_llm/acct_8899_table/: correct.json
data/canned_llm/acct_9012_narrative/: correct.json
data/canned_llm/sample_affidavit/: correct.json  hallucinated.json  hallucinated_dates.json
data/seeds/: pdf_manifest.csv  source_of_truth.csv
docs/: PLAN-advanced-track.md  PLAN.md
scripts/: make_sample_pdf.py
slides/: deck-draft.html
tests/: conftest.py  test_dag.py  test_demo.py  test_extract.py  test_guardrails.py  test_idempotency.py  test_llm_client.py
workshop/pipeline/: extract.py  guardrails.py  idempotency.py  llm_client.py  models.py
